# A-simple-Compiler

./: CMakeLists.txt  README.md  ast.h  config.json  lexer.cpp  lexer.h  main.cpp  parser.cpp  parser.h  pcode_interpreter.cpp  pcode_interpreter.h  semantic_analyzer.cpp  semantic_analyzer.h  shared.cpp  shared.h  symbol_table.h
